--- a/css/main.css
+++ b/css/main.css
@@ -7804,3 +7804,25 @@ footer {
   .nav-collapse.collapse {
     height: auto !important;
     overflow: visible !important; } }
+
+.loading_modal {
+    display:    none;
+    position:   fixed;
+    z-index:    1000;
+    top:        0;
+    left:       0;
+    height:     100%;
+    width:      100%;
+    background: rgba( 255, 255, 255, .8 ) 
+                url('http://i.stack.imgur.com/FhHRx.gif') 
+                50% 50% 
+                no-repeat;
+}
+
+body.loading {
+    overflow: hidden;   
+}
+
+body.loading .loading_modal {
+    display: block;
+}
